--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </head>
 
   <body>
-    
+    <video src="./video/cover-video.mp4" poster="./images/poster.jpg" autoplay muted loop></video>
+    <h1 class="page__heading">Надо сделать идеально</h1>
   </body>
 
 </html>
