--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="icon" href="./images/icon.ico" sizes="any">
     <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./fonts/font.css">
     <link rel="stylesheet" href="./styles/style.css">
     <meta property="og:title" content="Надо сделать идеально">
+    <meta property="og:description" content="Страница о важности ошибок">
     <meta property="og:url" content="/">
     <meta property="og:image" content="./images/og.jpg">
+    <meta property="twitter:card" content="./images/og.jpg">
   </head>
 
   <body>
